2007-01-05 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b43

 * Change: Use of <fieldset> in login popup.

2007-01-05 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b42

 * Change: Added 3rd param $comment_text to drawCommentAddForm()
		   This way the comment Text is not lost after reloadin captcha
   Thanks to Kai Tomalik.

 * Change: "Add comment", Change width of from 500 to 600

 * Change: Nicified layout of Buttons in captcha.
		
2007-01-05 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b41

 * Fix: yui sub album tree on startpage was broken for Opera an IE.

 * Change: Only create expensive subalbumtree if wanted and theme
		   is not matrix

 * Change: Only load expensive yui JS for subalbumtree if a tree is present.

 * Change: Move createTreeArray() from lib/content to lib/album

2007-01-02 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b40

 * Change: Update Copyright to 2007

2007-01-02 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b39

 * Fix: When Comments are globally deactivated, but a user has
        the right to add a comment, the global deactivation didnt
        work and a user can bypass this.

2007-01-02 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b38

 Thanks to Rasmus Lerdorf for reporting these bugs:

 * Fix: album::addPhoto() returns an array.
	    This was handled wrong in:
		- gallery_remote2.php
	    - popups/move_photo.php
	    - popups/copy_photo.php

 * Fix: Gallery remote can't handle HTML status messages.
	    Added global $plainErrorMessage in addPhotos()

 * Fix: Capture Date was saved wrong.

2006-12-31 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b37

 * Fix: realpath() on an URL in getGalleryBaseUrl()

 * Fix: Check for tempfolder when creating captcha instance was wrong.

 Thanks to Kai for reporting these bugs !

 * Change: remove leading / from captcha tempfolder
 
2006-12-28 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b36

 * Change: Splitted tools/build_manifest.php into
			- tools/build_manifest_1_3.php
			- tools/build_manifest_1_4.php
