@@ -22,7 +22,7 @@
 ?>
 <?php
 
-$gallery->version = '1.6-alpha3-svn-b43';
+$gallery->version = '1.6-alpha3-svn-b44';
 $gallery->config_version = 100;
 $gallery->album_version = 39;
 $gallery->user_version = 6;
