@@ -1,3 +1,9 @@
+2007-01-05 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b44
+
+ * Fix: Wrong use of gTranslate broke item count in rss
+
+   Thanks to Kai Tomalik
+
 2007-01-05 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b43
 
  * Change: Use of <fieldset> in login popup.
